# llm-poc

./: .env  README.md  blob_storage.py  config.py  main.py  prompt.py  pyproject.toml  rag.py  requirements.txt  review_poc.csv
llm/: prompt.py  rag.py
util/: blob_storage.py  init_vector_index.py
