[project]
name = "llm-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-search-documents>=11.6.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.50.0",
]
